Fix: Change JDK 17